# RegulAId

./: .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  objects.inv  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chunking/: aia_chunks.json  chunking-paragraphs.py  paragraphs.py  strip.py  strip_aiact.py
data/processed/: AIACT-New-Pipeline.md  AIACT.md  AIACT.old.md  aiact-chunks.json  fake-chunks.json  test-set_evaluation.json  testset.json
data/processed/test-set_evaluation.json/: testset.json
data/raw/: AIACT.html  fakedata.md
evaluation/: __init__.py  evaluate.py  generate_test-set.ipynb  generate_test_set.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.ts
frontend/src/: App.tsx  AppWithAgents.tsx  index.css  main.tsx
frontend/src/components/ui/: vortex.tsx
frontend/src/components/ui/shadcn-io/: etheral-shadow.tsx
frontend/src/components/ui/shadcn-io/ai/: inline-citation.tsx
frontend/src/components/ui/shadcn-io/text/: typing-text.tsx
ingunn-strip/: split_ai_act.py
reference/src/: index.html
reference/src/pdf_to_md/: index.html
search/: search_index.json
src/: README.md  article_splitter.py  pdf_to_formatted.md.py  pdf_to_md.py  recursiveCharacterTextSplitterWithKeywords.py  setup.py
src/agents/: README.md  __init__.py  checklist_agent.py  classification_agent.py  compliance_workflow.py
src/agents/callbacks/: __init__.py  streaming_callback.py
src/agents/tools/: __init__.py  retrieval_tools.py
src/api/: config.py  main.py
src/api/routers/: checklist.py  classify.py  compliance.py  search.py
src/api/services/: openai_service.py  rag_agent.py
src/bm25/: article_splitter.py
src/data_preprocessing/: chunking.py  strip_references.py
src/database/: __init__.py  add_fake_chunks.py  connection.py  init_db.py  reset_db.py  setup.py
src/preprocessing/: chunk_fake_data.py  chunking-paragraphs.py  strip_aiact.py
src/rag/: __init__.py  pipeline.py
src/retrievers/: __init__.py  bm25.py  filters.py  hybrid.py  test_retrievers.py  vector.py
src/schemas/: agent_schemas.py  search_schemas.py
