[project]
name = "PROJECT-TEMPLATE"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "docling>=2.52.0",
    "docling-core>=2.48.1",
    "docling-ibm-models>=3.9.1",
    "fastapi>=0.118.0",
    "openai>=1,<3",
    "easyocr>=1.7.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.8",
    "langchain-postgres>=0.0.15",
    "opencv-python>=4.12.0.88",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pymupdf>=1.26.4",
    "pypdf>=4.0.0",
    "rank-bm25>=0.2.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2,<3",
    "pydantic-settings>=2.11.0",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.1",
    "rapidfuzz>=3.14.1",
]


[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

mlx = [
    "mlx>=0.29.2",
    "mlx-vlm>=0.3.3",
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true


[project.scripts]
check-mlx-compat = "regulaid.utils.check_mlx_compat:main"

[tool.uv]
index-url = "https://pypi.org/simple"
package = true


[tool.pytest.ini_options]
# Ensure local project code is importable when running pytest without installing the package
addopts = "--import-mode=prepend"
